--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 GOOGLE_API_KEY = AIzaSyBdu-3gfI8GwlEQLOhXYk6EhYPVeNfJ4V0
+Runpod_Key = MKKI1LVAHHUEROHQ5XBUY5NRS15X8B2WL5K89YJ3
+runpod_id = uipuoufrurwb2a
