--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ cachetools==5.5.0
 certifi==2024.8.30
 cfgv==3.4.0
 charset-normalizer==3.3.2
-google.generativeai=0.8.3
+google.generativeai==0.8.3
 chromadb==0.5.7
 click==8.1.7
 coloredlogs==15.0.1
